# Melanolib

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  math.cpp  math.hpp  testing.cmake  utils.hpp
include/: CMakeLists.txt
include/melanolib/color/: color.hpp  color_iterator.hpp  color_range.hpp  gradient.hpp
include/melanolib/data_structures/: hash.hpp  icase_functors.hpp  id_pool.hpp  ordered_multimap.hpp
include/melanolib/dynlib/: library.hpp
include/melanolib/geo/: circle.hpp  geo.hpp  line.hpp  point.hpp  rectangle.hpp
include/melanolib/math/: integer.hpp  math.hpp  random.hpp  vector.hpp
include/melanolib/scripting/: object.hpp
include/melanolib/string/: ascii.hpp  encoding.hpp  format.hpp  language.hpp  quickstream.hpp  simple_stringutils.hpp  string_view.hpp  stringutils.hpp  text_generator.hpp  trie.hpp
include/melanolib/time/: date_time.hpp  time.hpp  time_parser.hpp  time_string.hpp  timer.hpp  units.hpp
include/melanolib/utils/: c++-compat.hpp  describe_type.hpp  flags.hpp  functional.hpp  gsl.hpp  movable.hpp  service.hpp  type_utils.hpp
math/: math.hpp
src/: CMakeLists.txt
src/color/: CMakeLists.txt  color.cpp
src/dynlib/: CMakeLists.txt  library.cpp  library_name.in.hpp
src/math/: CMakeLists.txt  random.cpp
src/string/: CMakeLists.txt  encoding.cpp  format.cpp  language.cpp  stringutils.cpp  text_generator.cpp
src/time/: CMakeLists.txt  date_time.cpp  time.cpp  time_string.cpp
string/: language.cpp  stringutils.cpp  stringutils.hpp
test/: CMakeLists.txt  dynlib_example.cpp  test_ascii.cpp  test_color.cpp  test_color_range.cpp  test_describe_type.cpp  test_dynlib.cpp  test_encoding.cpp  test_format.cpp  test_functional.cpp  test_geo.cpp  test_gradient.cpp  test_gsl.cpp  test_id_pool.cpp  test_math.cpp  test_movable.cpp  test_ordered_multimap.cpp  test_scripting_object.cpp  test_string.cpp  test_time.cpp  test_trie.cpp  test_type_utils.cpp  test_vector.cpp
time/: time.cpp  time.hpp  time_parser.hpp  time_string.hpp
utils/: c++-compat.hpp  functional.hpp  singleton.hpp
